--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,3 @@
-# Frontend Environment Variables
-REACT_APP_API_URL=http://localhost:5000/api
-REACT_APP_APP_NAME=MatchCare
-REACT_APP_VERSION=1.0.0
-
-# Development settings
+REACT_APP_API_URL=http://localhost:5000
 GENERATE_SOURCEMAP=false
 SKIP_PREFLIGHT_CHECK=true
